[project]
name = "movie2midi"
version = "0.1.0"
description = "動画ファイルのピアノ演奏をMIDIに変換するツール"
requires-python = ">=3.11"
dependencies = [
    "basic-pitch>=0.4.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "setuptools<81",
]

[project.optional-dependencies]
piano = [
    "piano-transcription-inference>=0.0.6",
    "torch>=2.0",
]

[project.scripts]
movie2midi = "movie2midi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
